--- a/src/assets/Languages/English.json
+++ b/src/assets/Languages/English.json
@@ -12,11 +12,13 @@
     "Signup_Screen_CreateButton": "Create new account ",
     "Signup_Screen_LoginButton": "Already Have Account?",
     "Signup_Screen_Information": "Order online and get all your orders delivered to your door step",
-    "Signup_Screen_CreateButton":"Next",
-    "Signup_Screen_LoginButton":"Already have an account ? Login",
-    "Signup_Screen_TermCondition":"I agree to term & conditions",
-    "Signup_Screen_Male":"Male",
-    "Signup_Screen_Female":"Female",
+    "Signup_Screen_CreateButton": "Next",
+    "Signup_Screen_LoginButton": "Already have an account ? Login",
+    "Signup_Screen_TermCondition": "I agree to term & conditions",
+    "Signup_Screen_Male": "Male",
+    "Signup_Screen_Female": "Female",
     "Bold_Font": "Poppins-Bold",
-    "Regular_Font": "Poppins-Regular"
+    "Regular_Font": "Poppins-Regular",
+    "Addrss_Screen_AddButton": "Add Address",
+    "Google_Key": "AIzaSyCpeZ-7s39VErA82ND6giypDZNaQZ4ZWak"
 }
