--- a/src/assets/Languages/English.json
+++ b/src/assets/Languages/English.json
@@ -20,5 +20,6 @@
     "Bold_Font": "Poppins-Bold",
     "Regular_Font": "Poppins-Regular",
     "Addrss_Screen_AddButton": "Add Address",
+    "Address_Screen_AddNewButton": "Add New Address",
     "Google_Key": "AIzaSyCpeZ-7s39VErA82ND6giypDZNaQZ4ZWak"
 }
